Estructura de bases de datos de acuerdo al plan de la cátedra | DB

--- a/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Esquemas de Control de Concurrencia.md
@@ -82,7 +82,7 @@ La técnica más utilizada para los esquemas multiversión es la de estampillas 
 - $r-ts(Qk)$: estampilla de tiempo de la transacción más joven que leyó con éxito la versión $Q_k$.
 
 Una transacción $T_i$ crea una versión $Q_k$ del dato $Q$, cuando ejecuta la operación de escritura sobre $Q$. El campo contenido tendrá el valor que escribió $T_i$ y $w-ts(Q_k) = r-ts(Q_k) = ts(T_i)$. El valor $r-ts(Q_k)$ puede modificarse cuando una transacción $T_j$ lee $Q_k$ y $r-ts(Q_k) < ts(T_j)$.
-Si una operación $T_i$ solicita una operación de lectura o escritura sobre $Q$, y $Q_k$ es una versión de $Q$ cuya $ts$ de escritura es la $ts$ más grande, menor que $ts(T_i)$, entonces se lleva a cabo una de las siguientes operaciones:
+Si una operación $T_i$ solicita una operación de lectura o escritura sobre $Q$, y $Q_k$ es una versión de $Q$ cuya estampilla de tiempo de escritura es el $ts$ más grande, menor que $ts(T_i)$, entonces se lleva a cabo una de las siguientes operaciones:
 1. Si $T_i$ quiere realizar una lectura sobre $Q$, entonces el valor devuelto es el contenido de la versión $Q_k$.
 2. Si $T_i$ quiere realizar una operación de escritura sobre $Q$, y $ts(T_i) < r-ts(Q_k)$, entonces la transacción $T_i$ retrocede; en caso contrario se crea una nueva versión $Q_i$.
 
@@ -123,7 +123,7 @@ SELECT SUM(saldo)
 
 Y $T_j$ otra transacción que ejecuta la siguiente inserción:
 ```sql
-INSERT INTO cuenta VALUES (‘Concordia’, C-201, 900)
+INSERT INTO cuenta VALUES ('Concordia', 'C-201', 900)
 ```
 
 Sea $P$ un cronograma que involucra a $T_k$ y $T_j$. Se espera que haya un conflicto potencial debido a las razones siguientes:
